// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> should render Home correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    [
      undefined,
      undefined,
      {
        "paddingBottom": 0,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 20,
      },
    ]
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[MockFunction]}
      refreshing={false}
    />
  }
  showsVerticalScrollIndicator={false}
>
  <RCTRefreshControl />
  <View>
    <View>
      <Text
        style={
          {
            "color": "#000",
            "fontFamily": "Muli_700Bold",
            "fontSize": 14,
            "lineHeight": 14,
          }
        }
      >
        Saldo
      </Text>
      <View>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 28,
              "lineHeight": 36,
            }
          }
          testID="balanceId"
        >
          ****
        </Text>
        <MaterialIcons
          color="#666"
          name="visibility-off"
          onPress={[Function]}
          size={26}
        />
      </View>
      <RNGestureHandlerButton
        activeOpacity={0.105}
        collapsable={false}
        delayLongPress={600}
        handlerTag={1}
        handlerType="NativeViewGestureHandler"
        onActiveStateChange={[Function]}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        onPress={[MockFunction]}
        style={
          {
            "backgroundColor": "#1f35d9",
          }
        }
        underlayColor="black"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "black",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderRadius": undefined,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            {
              "color": "#fff",
              "fontFamily": "Muli_700Bold",
              "fontSize": 14,
              "lineHeight": 14,
            }
          }
        >
          Depositar
        </Text>
      </RNGestureHandlerButton>
      <Text
        style={
          {
            "color": "#666",
            "fontFamily": "Muli_600SemiBold",
            "fontSize": 14,
            "lineHeight": 14,
          }
        }
      >
        Nosso rendimento com mineração foi de
         
        %
      </Text>
      <Text
        style={
          {
            "color": "#666",
            "fontFamily": "Muli_600SemiBold",
            "fontSize": 14,
            "lineHeight": 14,
          }
        }
      >
        Ultima atualização 
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Link de indicação
        </Text>
        <MaterialCommunityIcons
          color="#fff"
          name="content-copy"
          size={16}
        />
      </View>
    </View>
    <View>
      <Text
        style={
          {
            "color": "#000",
            "fontFamily": "Muli_700Bold",
            "fontSize": 28,
            "lineHeight": 36,
          }
        }
      >
        Histórico
      </Text>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                undefined,
                {
                  "backgroundColor": "#e0e0e0",
                },
              ]
            }
          >
            <MaterialIcons
              color="#000"
              name="vertical-align-bottom"
              size={24}
            />
          </View>
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 16,
                "lineHeight": 18,
              }
            }
          >
            Saques
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                undefined,
                {
                  "backgroundColor": "#e0e0e0",
                },
              ]
            }
          >
            <MaterialIcons
              color="#000"
              name="vertical-align-top"
              size={24}
            />
          </View>
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 16,
                "lineHeight": 18,
              }
            }
          >
            Depósitos
          </Text>
        </View>
      </View>
    </View>
    <View>
      <Text
        style={
          {
            "color": "#000",
            "fontFamily": "Muli_700Bold",
            "fontSize": 28,
            "lineHeight": 36,
          }
        }
      >
        Meus Ganhos
      </Text>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Ganho acumulado
        </Text>
        <View
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 22,
                "lineHeight": 28,
              }
            }
          >
            ****
          </Text>
        </View>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Rendimento do dia
        </Text>
        <View
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 22,
                "lineHeight": 28,
              }
            }
          >
            Saldo indisponível
          </Text>
        </View>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Ganho disponível
        </Text>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          ****
        </Text>
        <RNGestureHandlerButton
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={2}
          handlerType="NativeViewGestureHandler"
          onActiveStateChange={[Function]}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          onPress={[MockFunction]}
          style={
            {
              "backgroundColor": "#1f35d9",
            }
          }
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            style={
              {
                "color": "#fff",
                "fontFamily": "Muli_700Bold",
                "fontSize": 14,
                "lineHeight": 14,
              }
            }
          >
            Retirar
          </Text>
        </RNGestureHandlerButton>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Ganho ID Broker
        </Text>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          Saldo indisponível
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<Home /> should render Home with values correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    [
      undefined,
      undefined,
      {
        "paddingBottom": 0,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 20,
      },
    ]
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[MockFunction]}
      refreshing={false}
    />
  }
  showsVerticalScrollIndicator={false}
>
  <RCTRefreshControl />
  <View>
    <View>
      <Text
        style={
          {
            "color": "#000",
            "fontFamily": "Muli_700Bold",
            "fontSize": 14,
            "lineHeight": 14,
          }
        }
      >
        Saldo
      </Text>
      <View>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 28,
              "lineHeight": 36,
            }
          }
          testID="balanceId"
        >
          ****
        </Text>
        <MaterialIcons
          color="#666"
          name="visibility-off"
          onPress={[Function]}
          size={26}
        />
      </View>
      <RNGestureHandlerButton
        activeOpacity={0.105}
        collapsable={false}
        delayLongPress={600}
        handlerTag={3}
        handlerType="NativeViewGestureHandler"
        onActiveStateChange={[Function]}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        onPress={[MockFunction]}
        style={
          {
            "backgroundColor": "#1f35d9",
          }
        }
        underlayColor="black"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "black",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderRadius": undefined,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            {
              "color": "#fff",
              "fontFamily": "Muli_700Bold",
              "fontSize": 14,
              "lineHeight": 14,
            }
          }
        >
          Depositar
        </Text>
      </RNGestureHandlerButton>
      <Text
        style={
          {
            "color": "#666",
            "fontFamily": "Muli_600SemiBold",
            "fontSize": 14,
            "lineHeight": 14,
          }
        }
      >
        Nosso rendimento com mineração foi de
         
        1
        %
      </Text>
      <Text
        style={
          {
            "color": "#666",
            "fontFamily": "Muli_600SemiBold",
            "fontSize": 14,
            "lineHeight": 14,
          }
        }
      >
        Ultima atualização 
        30/09/2023  17:16:58
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Link de indicação
        </Text>
        <MaterialCommunityIcons
          color="#fff"
          name="content-copy"
          size={16}
        />
      </View>
    </View>
    <View>
      <Text
        style={
          {
            "color": "#000",
            "fontFamily": "Muli_700Bold",
            "fontSize": 28,
            "lineHeight": 36,
          }
        }
      >
        Histórico
      </Text>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                undefined,
                {
                  "backgroundColor": "#e0e0e0",
                },
              ]
            }
          >
            <MaterialIcons
              color="#000"
              name="vertical-align-bottom"
              size={24}
            />
          </View>
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 16,
                "lineHeight": 18,
              }
            }
          >
            Saques
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                undefined,
                {
                  "backgroundColor": "#e0e0e0",
                },
              ]
            }
          >
            <MaterialIcons
              color="#000"
              name="vertical-align-top"
              size={24}
            />
          </View>
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 16,
                "lineHeight": 18,
              }
            }
          >
            Depósitos
          </Text>
        </View>
      </View>
    </View>
    <View>
      <Text
        style={
          {
            "color": "#000",
            "fontFamily": "Muli_700Bold",
            "fontSize": 28,
            "lineHeight": 36,
          }
        }
      >
        Meus Ganhos
      </Text>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Ganho acumulado
        </Text>
        <View
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 22,
                "lineHeight": 28,
              }
            }
          >
            ****
          </Text>
        </View>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Rendimento do dia
        </Text>
        <View
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#000",
                "fontFamily": "Muli_700Bold",
                "fontSize": 22,
                "lineHeight": 28,
              }
            }
          >
            R$ 10,00
          </Text>
        </View>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Ganho disponível
        </Text>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          ****
        </Text>
        <RNGestureHandlerButton
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={4}
          handlerType="NativeViewGestureHandler"
          onActiveStateChange={[Function]}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          onPress={[MockFunction]}
          style={
            {
              "backgroundColor": "#1f35d9",
            }
          }
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            style={
              {
                "color": "#fff",
                "fontFamily": "Muli_700Bold",
                "fontSize": 14,
                "lineHeight": 14,
              }
            }
          >
            Retirar
          </Text>
        </RNGestureHandlerButton>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Blucoin
        </Text>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          10
           BLC
        </Text>
      </View>
      <View
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_600SemiBold",
              "fontSize": 16,
              "lineHeight": 18,
            }
          }
        >
          Ganho ID Broker
        </Text>
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Muli_700Bold",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          R$ 10,00
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
